--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,8 @@
 	"image": "mcr.microsoft.com/devcontainers/base:noble",
 	"features": {
 		"ghcr.io/devcontainers-extra/features/expo-cli:1": {},
-		"ghcr.io/devcontainers-extra/features/firebase-cli:2": {}
+		"ghcr.io/devcontainers-extra/features/firebase-cli:2": {},
+		"ghcr.io/nordcominc/devcontainer-features/android-sdk:1": {}
 	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
